# Genai-CICD-Python

./: CHATGPT Generated Python YML.docx  docker-compose.yml  pom.xml  pyproject.toml  sonar-project.properties
.github/workflows/: CD.yml  CI.yml  main.yml
tests/: test_main.py
